--- a/on-premises/oscars_etl.ipynb
+++ b/on-premises/oscars_etl.ipynb
@@ -244,7 +244,7 @@
     "    # Ensure budget is a string\n",
     "    budget = str(budget)\n",
     "    \n",
-    "    # Check if the budget is a range (we already set ranges to $0 in previous step)\n",
+    "    # Set the 0 string budgets to int\n",
     "    if budget == '0':\n",
     "        return 0\n",
     "    \n",
